added random colors (davidmerfield)

--- a/client/circleCtrl.html
+++ b/client/circleCtrl.html
@@ -1,29 +1,20 @@
 <template name="circlesCtrl">
-	<h1>generate some random circles</h1>
-  <div class="container-fluid">
-  	<div class="row">
-  	<!--  -->
-		<div class="col-xs-2">
-
-			<div class="btn-group-vertical">
-	  		<button id="circleAdd" type="button" class="btn btn-sm btn-primary">
-	  			<i class="fa fa-plus"></i>
-	  		</button>
-	  		<button id="circleRemove" type="button" class="btn btn-sm btn-danger">
-	  			<i class="fa fa-minus"></i>
-	  		</button>
-	  		</div>
+	<h1>generate some sexy random circles</h1>
+	<div class="container">
+		<div class="row">
+	  <form class="form-inline">
+		<div class="btn-group-vertical">
+			<button id="circleAdd" type="button" class="btn btn-sm btn-primary">
+				<i class="fa fa-plus"></i>
+			</button>
+			<button id="circleRemove" type="button" class="btn btn-sm btn-danger">
+				<i class="fa fa-minus"></i>
+			</button>
 		</div>
-		<!--  -->
-		<div class="col-xs-2">
 			<button id="generateCircles" type="button" class="btn btn-warning">
 				GENERATE <span class="badge">{{circleCount}}</span>
 			</button>
-		</div>
-  	</div><!-- @end row -->
+	  </form>
+	  </div>
   </div>
-
-  <form>
-  	
-  </form>
 </template>
