--- a/client/circles.html
+++ b/client/circles.html
@@ -1,9 +1,11 @@
 <head>
   <title>circles</title>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.1.1/randomColor.js"></script>
 </head>
 
 <body>
   {{> circlesCtrl}}
+  <hr>
   <div id="circleContainer">
   </div>
 </body>
