added panel remove button

--- a/client/circleCtrl.html
+++ b/client/circleCtrl.html
@@ -31,7 +31,7 @@ FORM SELECTING RANDOM CIRCLE OPTIONS
 	<!-- circleHue options dropdown -->
 	<div class="form-group dropdown">
 		<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-			<strong>Hue</strong>
+			<strong>Hue</strong> <i class="fa fa-chevron-down"></i>
 		</button>
 		<ul class="dropdown-menu" role="menu">
 			{{#each circleHueList}}
@@ -51,7 +51,7 @@ FORM SELECTING RANDOM CIRCLE OPTIONS
 	<!-- circleLuminosity options dropdown -->
 	<div class="form-group dropdown">
 		<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-			<strong>Luminosity</strong>
+			<strong>Luminosity</strong> <i class="fa fa-chevron-down"></i>
 		</button>
 		<ul class="dropdown-menu" role="menu">
 			{{#each circleLumList}}
