changed transition to more bloom-like

--- a/client/circleCtrl.html
+++ b/client/circleCtrl.html
@@ -1,7 +1,7 @@
 <template name="circlesCtrl">
 <div class="container">
 <div class="row">
-	<h1>generate some sexy random circles</h1>
+	<h1>generate random blooming circles</h1>
 </div>
 <!-- 
 FORM SELECTING RANDOM CIRCLE OPTIONS
